// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateViewConfigJs can generate fixture ARRAY_PROPS 1`] = `
Map {
  "ARRAY_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const ArrayPropsNativeComponentViewConfig = {
  uiViewClassName: 'ArrayPropsNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    names: true,
    disableds: true,
    progress: true,
    radii: true,
    colors: true,
    srcs: true,
    points: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'ArrayPropsNativeComponent',
  () => ArrayPropsNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "BOOLEAN_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const BooleanPropNativeComponentViewConfig = {
  uiViewClassName: 'BooleanPropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'BooleanPropNativeComponent',
  () => BooleanPropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture COLOR_PROP 1`] = `
Map {
  "COLOR_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const ColorPropNativeComponentViewConfig = {
  uiViewClassName: 'ColorPropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    tintColor: { process: require('processColor') },
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'ColorPropNativeComponent',
  () => ColorPropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture ENUM_PROP 1`] = `
Map {
  "ENUM_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const EnumPropsNativeComponentViewConfig = {
  uiViewClassName: 'EnumPropsNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    alignment: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'EnumPropsNativeComponent',
  () => EnumPropsNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EVENT_NESTED_OBJECT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const EventsNestedObjectNativeComponentViewConfig = {
  uiViewClassName: 'EventsNestedObjectNativeComponent',
  Commands: {},
  Constants: {},

  bubblingEventTypes: {
    onChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange'
      }
    }
  },

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'EventsNestedObjectNativeComponent',
  () => EventsNestedObjectNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_PROPS 1`] = `
Map {
  "EVENT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const EventsNativeComponentViewConfig = {
  uiViewClassName: 'EventsNativeComponent',
  Commands: {},
  Constants: {},

  bubblingEventTypes: {
    onChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange'
      }
    }
  },

  directEventTypes: {
    onEventDirect: {
      registrationName: 'onEventDirect'
    }
  },

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'EventsNativeComponent',
  () => EventsNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture FLOAT_PROPS 1`] = `
Map {
  "FLOAT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const FloatPropNativeComponentViewConfig = {
  uiViewClassName: 'FloatPropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    blurRadius: true,
    blurRadius2: true,
    blurRadius3: true,
    blurRadius4: true,
    blurRadius5: true,
    blurRadius6: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'FloatPropNativeComponent',
  () => FloatPropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture IMAGE_PROP 1`] = `
Map {
  "IMAGE_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const ImagePropNativeComponentViewConfig = {
  uiViewClassName: 'ImagePropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    thumbImage: { process: require('resolveAssetSource') },
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'ImagePropNativeComponent',
  () => ImagePropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTEGER_PROPS 1`] = `
Map {
  "INTEGER_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const IntegerPropNativeComponentViewConfig = {
  uiViewClassName: 'IntegerPropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    progress1: true,
    progress2: true,
    progress3: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'IntegerPropNativeComponent',
  () => IntegerPropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "INTERFACE_ONLYNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const InterfaceOnlyComponentViewConfig = {
  uiViewClassName: 'InterfaceOnlyComponent',
  Commands: {},
  Constants: {},

  bubblingEventTypes: {
    onChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange'
      }
    }
  },

  validAttributes: {
    accessibilityHint: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'InterfaceOnlyComponent',
  () => InterfaceOnlyComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "MULTI_NATIVE_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const ImageColorPropNativeComponentViewConfig = {
  uiViewClassName: 'ImageColorPropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    thumbImage: { process: require('resolveAssetSource') },
    color: { process: require('processColor') },
    thumbTintColor: { process: require('processColor') },
    point: { diff: require('pointsDiffer') },
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'ImageColorPropNativeComponent',
  () => ImageColorPropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture POINT_PROP 1`] = `
Map {
  "POINT_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const PointPropNativeComponentViewConfig = {
  uiViewClassName: 'PointPropNativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    startPoint: { diff: require('pointsDiffer') },
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'PointPropNativeComponent',
  () => PointPropNativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture STRING_PROP 1`] = `
Map {
  "STRING_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const StringPropComponentViewConfig = {
  uiViewClassName: 'StringPropComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    accessibilityHint: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'StringPropComponent',
  () => StringPropComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "TWO_COMPONENTS_DIFFERENT_FILESNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const MultiFile1NativeComponentViewConfig = {
  uiViewClassName: 'MultiFile1NativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiFile1NativeComponent',
  () => MultiFile1NativeComponentViewConfig,
);

const MultiFile2NativeComponentViewConfig = {
  uiViewClassName: 'MultiFile2NativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiFile2NativeComponent',
  () => MultiFile2NativeComponentViewConfig,
);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "TWO_COMPONENTS_SAME_FILENativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 * @flow
 */

'use strict';

const ReactNativeStyleAttributes = require('ReactNativeStyleAttributes');
const ReactNativeViewConfigRegistry = require('ReactNativeViewConfigRegistry');

const MultiComponent1NativeComponentViewConfig = {
  uiViewClassName: 'MultiComponent1NativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiComponent1NativeComponent',
  () => MultiComponent1NativeComponentViewConfig,
);

const MultiComponent2NativeComponentViewConfig = {
  uiViewClassName: 'MultiComponent2NativeComponent',
  Commands: {},
  Constants: {},

  validAttributes: {
    disabled: true,
    style: ReactNativeStyleAttributes
  }
};

ReactNativeViewConfigRegistry.register(
  'MultiComponent2NativeComponent',
  () => MultiComponent2NativeComponentViewConfig,
);
",
}
`;
